# neural_networks

./: .gitignore  .gitmodules  CMakeLists.txt
dots_gen/: CMakeLists.txt  gl_funcs.h  main.cpp  structs.h
gen_alg/: CMakeLists.txt
gen_alg/src/: main.cpp
perceptron/: CMakeLists.txt  layer.h  network.h  neuron.h
perceptron/src/: layer.cpp  main.cpp  network.cpp  neuron.cpp
